[gd_scene load_steps=41 format=3 uid="uid://bcbfn0mh5ml3a"]

[ext_resource type="Script" uid="uid://cswadirlsk662" path="res://character/main_character.gd" id="1_qt5ce"]
[ext_resource type="Texture2D" uid="uid://dup4vfv12nvxo" path="res://res/Main Characters/Appearing (96x96).png" id="2_77ofe"]
[ext_resource type="Texture2D" uid="uid://cafqfucppjp5q" path="res://res/Main Characters/Idle-Sheet1.png" id="3_k5mev"]
[ext_resource type="Texture2D" uid="uid://wpxdhc62uowx" path="res://res/Main Characters/Desappearing (96x96).png" id="3_v50k7"]
[ext_resource type="Texture2D" uid="uid://dot15feijtv3a" path="res://res/Main Characters/Run.png" id="6_dkkku"]
[ext_resource type="Texture2D" uid="uid://dghaow7krrqi0" path="res://res/Main Characters/Jump-All.png" id="6_v50k7"]
[ext_resource type="AudioStream" uid="uid://bnewx4y0brkdf" path="res://res/Sounds/GameSFX/Blops/Retro Blop StereoUP 04.wav" id="7_wiv1j"]
[ext_resource type="AudioStream" uid="uid://db88njjaqswrc" path="res://res/Sounds/GameSFX/Music/Negative/Retro Negative Melody 01 - aCustom1.wav" id="8_7in4v"]
[ext_resource type="AudioStream" uid="uid://pb8bb1ggmcq" path="res://res/Sounds/GameSFX/Music/Negative/Retro Negative Melody 02 - space voice pad.wav" id="8_v50k7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vmuo8"]
atlas = ExtResource("2_77ofe")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wiv1j"]
atlas = ExtResource("2_77ofe")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7in4v"]
atlas = ExtResource("2_77ofe")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_v50k7"]
atlas = ExtResource("2_77ofe")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkkku"]
atlas = ExtResource("2_77ofe")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fj6y"]
atlas = ExtResource("2_77ofe")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vs4ir"]
atlas = ExtResource("2_77ofe")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5pfh"]
atlas = ExtResource("3_v50k7")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilyk2"]
atlas = ExtResource("3_v50k7")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvpoa"]
atlas = ExtResource("3_v50k7")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldvrc"]
atlas = ExtResource("3_v50k7")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjbsu"]
atlas = ExtResource("3_v50k7")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_132g7"]
atlas = ExtResource("3_v50k7")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_e85t2"]
atlas = ExtResource("3_v50k7")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy0yj"]
atlas = ExtResource("6_v50k7")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y20ix"]
atlas = ExtResource("3_k5mev")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_445nj"]
atlas = ExtResource("3_k5mev")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_054ll"]
atlas = ExtResource("3_k5mev")
region = Rect2(128, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouwug"]
atlas = ExtResource("3_k5mev")
region = Rect2(192, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_34fo7"]
atlas = ExtResource("6_v50k7")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cgku"]
atlas = ExtResource("6_dkkku")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsdje"]
atlas = ExtResource("6_dkkku")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rljcj"]
atlas = ExtResource("6_dkkku")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_60bak"]
atlas = ExtResource("6_dkkku")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5kkh"]
atlas = ExtResource("6_dkkku")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lm4py"]
atlas = ExtResource("6_dkkku")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lww8"]
atlas = ExtResource("6_dkkku")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsl8c"]
atlas = ExtResource("6_dkkku")
region = Rect2(80, 160, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_cy0yj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmuo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wiv1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7in4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v50k7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkkku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fj6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vs4ir")
}],
"loop": false,
"name": &"Appearing",
"speed": 20.0
}, {
"frames": [],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5pfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilyk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvpoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldvrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjbsu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_132g7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e85t2")
}, {
"duration": 5.0,
"texture": null
}],
"loop": false,
"name": &"Disappering",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy0yj")
}],
"loop": false,
"name": &"Fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y20ix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_445nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_054ll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouwug")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_34fo7")
}],
"loop": false,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cgku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsdje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rljcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60bak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5kkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lm4py")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lww8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsl8c")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v50k7"]
size = Vector2(16, 45)

[sub_resource type="CircleShape2D" id="CircleShape2D_wiv1j"]
radius = 29.0

[node name="MainCharacter" type="CharacterBody2D" groups=["player"]]
collision_mask = 18
script = ExtResource("1_qt5ce")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_cy0yj")
animation = &"Run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
top_level = true
position = Vector2(-1, 1.5)
shape = SubResource("RectangleShape2D_v50k7")

[node name="Appear" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_wiv1j")
volume_db = -20.0

[node name="OnHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_v50k7")
volume_db = -20.0

[node name="OnDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_7in4v")
volume_db = -20.0

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_bottom = 360
editor_draw_limits = true

[node name="Pickup" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickup"]
shape = SubResource("CircleShape2D_wiv1j")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Pickup" to="." method="_on_pickup_area_entered"]
